udpdate fino